# trackyio

./: .gitignore
app/backend/: .env.example  pyproject.toml  run.py
app/backend/app/: __init__.py
app/backend/app/blueprints/: auth.py  health_check.py  projects.py  tasks.py
app/backend/app/core/: config.py  logging.py
app/backend/app/db/: extensions.py  models.py
app/backend/app/schema/: auth_schema.py  project_schema.py  task_schema.py
app/frontend/: README.md
